--- a/index.html
+++ b/index.html
@@ -28,48 +28,48 @@
         <div class="projects">
 
             <div class="p">
-                <img src="/img1.png">
+                <img src="./img1.png">
                 <div class="text c1">Retro Airplane</div>
                 <div class="text c2">Illustration</div>
             </div>
             
             <div class="p">
-                <img src="/img2.png">
+                <img src="./img2.png">
                 <div class="text c1">Old Train</div>
                 <div class="text c2">Photography</div>
             </div>
             <div class="p">
-                <img src="/img3.png">
+                <img src="./img3.png">
                 <div class="text c1">Scenic Landscape</div>
                 <div class="text c2">Painting</div>
             </div>
             <div class="p">
-                <img src="/img4.png">
+                <img src="./img4.png">
                 <div class="text c1">Vintage City</div>
                 <div class="text c2">Graphic Design</div>
             </div>
             <div class="p">
-                <img src="/img5.png">
+                <img src="./img5.png">
                 <div class="text c1">Old Ship</div>
                 <div class="text c2">Illustration</div>
             </div>
             <div class="p">
-                <img src="/img6.png">
+                <img src="./img6.png">
                 <div class="text c1">Desert Adventure</div>
                 <div class="text c2">Videography</div>
             </div>
             <div class="p">
-                <img src="/img7.png">
+                <img src="./img7.png">
                 <div class="text c1">Mountain Trek</div>
                 <div class="text c2">Painting</div>
             </div>
             <div class="p">
-                <img src="/img8.png">
+                <img src="./img8.png">
                 <div class="text c1">Retro Car</div>
                 <div class="text c2">Travel Blog</div>
             </div>
             <div class="p">
-                <img src="/img9.png">
+                <img src="./img9.png">
                 <div class="text c1">Beach Holiday</div>
                 <div class="text c2">Illustration</div>
             </div>
